добавил таблицу, мок сервер, поправил верстку сайдбара

--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -73,7 +73,8 @@
     }
 
     body {
-        @apply bg-background text-foreground;
+        @apply text-foreground;
+        background: #F5F7FB;
     }
 }
 
