--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -74,12 +74,12 @@
 
     body {
         @apply text-foreground;
-        background: #F5F7FB;
+        background: #f5f7fb;
     }
 }
 
 ul li::marker {
-    color: #7C7C7C;
+    color: #7c7c7c;
     width: 3px;
     height: 3px;
 }
@@ -93,9 +93,14 @@ ul li::marker {
 }
 
 .flex-center {
-    @apply flex justify-center items-center
+    @apply flex items-center justify-center;
 }
 
 .page-title {
     @apply text-[32px] font-bold leading-9 text-[#333333];
+}
+
+.label-required::after {
+    content: ' *';
+    color: red;
 }
