--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -99,3 +99,16 @@ ul li::marker {
 .page-title {
     @apply text-[32px] font-bold leading-9 text-[#333333];
 }
+
+.bordered-space {
+    @apply h-[70px] border-b border-b-[#ECECEC]
+}
+
+/* Ограничивает длину строки до 2х, переполнение уходит в "..." */
+.line-ellipsis-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
