--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -74,12 +74,12 @@
 
     body {
         @apply text-foreground;
-        background: #F5F7FB;
+        background: #f5f7fb;
     }
 }
 
 ul li::marker {
-    color: #7C7C7C;
+    color: #7c7c7c;
     width: 3px;
     height: 3px;
 }
@@ -93,7 +93,7 @@ ul li::marker {
 }
 
 .flex-center {
-    @apply flex justify-center items-center
+    @apply flex items-center justify-center;
 }
 
 .page-title {
@@ -101,7 +101,12 @@ ul li::marker {
 }
 
 .bordered-space {
-    @apply h-[70px] border-b border-b-[#ECECEC]
+    @apply h-[70px] border-b border-b-[#ECECEC];
+}
+
+.label-required::after {
+    content: ' *';
+    color: red;
 }
 
 /* Ограничивает длину строки до 2х, переполнение уходит в "..." */
