--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -90,6 +90,10 @@ ul li::marker {
 
 .nav-link {
     @apply flex gap-3 py-4 text-base font-normal text-white hover:opacity-60;
+
+    svg {
+        fill: white;
+    }
 }
 
 .flex-center {
@@ -116,4 +120,14 @@ ul li::marker {
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
+}
+
+.tab-icon {
+    svg {
+        fill: #183028;
+    }
+}
+
+.info-wrapper {
+    @apply rounded-[10px] border border-tabs-content bg-white px-5 py-8
 }
