--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -69,6 +69,8 @@
 @layer base {
     * {
         @apply border-border;
+        @apply focus:outline-primary;
+        @apply [&:is(input)]:focus:outline-none;
         font-family: system-ui, sans-serif;
     }
 
@@ -135,5 +137,5 @@ ul li::marker {
 }
 
 .info-wrapper {
-    @apply rounded-[10px] border border-tabs-content bg-white px-5 py-8
+    @apply rounded-[10px] border border-tabs-content bg-white px-5 py-8;
 }
